[gd_scene load_steps=23 format=3 uid="uid://dnt022hht8whv"]

[ext_resource type="Script" uid="uid://bpdyi4ljq8m5r" path="res://Scripts/Cards/card_people.gd" id="1_4knpa"]
[ext_resource type="FontFile" uid="uid://t8en3f64e5wd" path="res://Resources/Fonts/VarelaRound-Regular.ttf" id="2_4knpa"]
[ext_resource type="StyleBox" uid="uid://vuf616qiejlb" path="res://Resources/Themes/card_theme.tres" id="2_ch0ss"]
[ext_resource type="StyleBox" uid="uid://tlhqbwtjyiab" path="res://Resources/Themes/invisible.tres" id="3_gq5yt"]
[ext_resource type="Texture2D" uid="uid://cgoufcjlvl2h3" path="res://Assets/Images/People/girl6.png" id="5_4knpa"]
[ext_resource type="Script" uid="uid://b0y3pwe67c2hl" path="res://addons/TextureRectRounded/TextureRectRounded.gd" id="6_gq5yt"]
[ext_resource type="Texture2D" uid="uid://cbxk4ihc5kg2k" path="res://Assets/Images/Relations/unknown.png" id="8_ch0ss"]
[ext_resource type="Texture2D" uid="uid://40rvenr1jh4h" path="res://Assets/Images/Relations/chemistry.png" id="9_rb7x0"]
[ext_resource type="Texture2D" uid="uid://cttt5o3nukmmj" path="res://Assets/Images/Menu/dinero (8).png" id="10_gq5yt"]
[ext_resource type="StyleBox" uid="uid://dxx7jpd1wgxfq" path="res://Resources/Themes/progress_menu.tres" id="10_rb7x0"]
[ext_resource type="StyleBox" uid="uid://ccfsyh3022rvs" path="res://Resources/Themes/progress_menu_green.tres" id="11_ch0ss"]
[ext_resource type="Texture2D" uid="uid://dneho5mt71ijy" path="res://Assets/Images/State_mind/happy.png" id="11_rb7x0"]
[ext_resource type="Texture2D" uid="uid://c5gaaxpbxifb3" path="res://Assets/Images/Menu/trebol.png" id="12_rb7x0"]
[ext_resource type="StyleBox" uid="uid://chj6tdlxsk0mn" path="res://Resources/Themes/white_pnl.tres" id="13_65apb"]
[ext_resource type="Texture2D" uid="uid://cknjrxvaugwea" path="res://Assets/Images/Upgrades/phone1.png" id="14_urvbm"]
[ext_resource type="StyleBox" uid="uid://d25pq74oe25t" path="res://Resources/Themes/progress_menu_red.tres" id="15_65apb"]
[ext_resource type="Texture2D" uid="uid://de62o7ku8ujbr" path="res://Assets/Images/UI/work.png" id="15_gq5yt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ch0ss"]
corner_radius_top_left = 256
corner_radius_top_right = 256
corner_radius_bottom_right = 256
corner_radius_bottom_left = 256
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4kco4"]
bg_color = Color(0.154876, 0.154876, 0.154876, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pp7py"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lt7r6"]
bg_color = Color(0.905929, 0.840568, 3.85046e-07, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0pkyf"]
bg_color = Color(0.905882, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Control" type="Control"]
custom_minimum_size = Vector2(1000, 540)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -80.0
offset_bottom = -1868.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_4knpa")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_ch0ss")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="Panel" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("3_gq5yt")

[node name="TextureRectRounded" type="Panel" parent="Panel/HBoxContainer/Panel"]
clip_children = 1
custom_minimum_size = Vector2(512, 512)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ch0ss")
script = ExtResource("6_gq5yt")
radius_bottom_left = 256
radius_bottom_right = 256
radius_top_left = 256
radius_top_right = 256
texture = ExtResource("5_4knpa")
metadata/_custom_type_script = "uid://b0y3pwe67c2hl"

[node name="data_section" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="name_section" type="HBoxContainer" parent="Panel/HBoxContainer/data_section"]
custom_minimum_size = Vector2(450, 64)
layout_mode = 2
alignment = 1

[node name="name_lbl" type="Label" parent="Panel/HBoxContainer/data_section/name_section"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_4knpa")
theme_override_font_sizes/font_size = 50
text = "Name Surname"
horizontal_alignment = 1
vertical_alignment = 1

[node name="years_old_section" type="HBoxContainer" parent="Panel/HBoxContainer/data_section"]
visible = false
custom_minimum_size = Vector2(450, 40)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="yearsold_lbl" type="Label" parent="Panel/HBoxContainer/data_section/years_old_section"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_4knpa")
theme_override_font_sizes/font_size = 30
text = "dd/mm/yy - 99 years_"
horizontal_alignment = 1
vertical_alignment = 1

[node name="work_section" type="HBoxContainer" parent="Panel/HBoxContainer/data_section"]
visible = false
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
alignment = 1

[node name="work_icon" type="TextureRect" parent="Panel/HBoxContainer/data_section/work_section"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("15_gq5yt")

[node name="work_lbl" type="Label" parent="Panel/HBoxContainer/data_section/work_section"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_4knpa")
theme_override_font_sizes/font_size = 30
text = "Work"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/data_section"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Panel" type="Panel" parent="Panel/HBoxContainer/data_section/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("3_gq5yt")

[node name="state_mind_img" type="TextureRect" parent="Panel/HBoxContainer/data_section/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_rb7x0")
expand_mode = 1

[node name="Panel2" type="Panel" parent="Panel/HBoxContainer/data_section/HBoxContainer"]
custom_minimum_size = Vector2(5, 128)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("3_gq5yt")

[node name="Panel" type="Panel" parent="Panel/HBoxContainer/data_section/HBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4kco4")

[node name="indicators_section" type="VBoxContainer" parent="Panel/HBoxContainer/data_section/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="work_section2" type="HBoxContainer" parent="Panel/HBoxContainer/data_section/HBoxContainer/indicators_section"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
alignment = 1

[node name="friend_img" type="TextureRect" parent="Panel/HBoxContainer/data_section/HBoxContainer/indicators_section/work_section2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("8_ch0ss")
expand_mode = 1

[node name="friend_progress" type="ProgressBar" parent="Panel/HBoxContainer/data_section/HBoxContainer/indicators_section/work_section2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
theme_override_styles/background = SubResource("StyleBoxFlat_pp7py")
theme_override_styles/fill = SubResource("StyleBoxFlat_lt7r6")
max_value = 600.0
step = 1.0
value = 50.0
show_percentage = false

[node name="work_section3" type="HBoxContainer" parent="Panel/HBoxContainer/data_section/HBoxContainer/indicators_section"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
alignment = 1

[node name="chemistry_img" type="TextureRect" parent="Panel/HBoxContainer/data_section/HBoxContainer/indicators_section/work_section3"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("9_rb7x0")
expand_mode = 1

[node name="chemistry_progress" type="ProgressBar" parent="Panel/HBoxContainer/data_section/HBoxContainer/indicators_section/work_section3"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
theme_override_styles/background = SubResource("StyleBoxFlat_pp7py")
theme_override_styles/fill = SubResource("StyleBoxFlat_0pkyf")
max_value = 600.0
step = 1.0
value = 50.0
show_percentage = false

[node name="effects_section" type="HBoxContainer" parent="Panel/HBoxContainer/data_section"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="happy_section" type="VBoxContainer" parent="Panel/HBoxContainer/data_section/effects_section"]
layout_mode = 2
alignment = 1

[node name="happy_pnl" type="Panel" parent="Panel/HBoxContainer/data_section/effects_section/happy_section"]
custom_minimum_size = Vector2(84, 84)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("10_rb7x0")

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/data_section/effects_section/happy_section/happy_pnl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 10.0
offset_right = 32.0
offset_bottom = 74.0
grow_horizontal = 2
texture = ExtResource("11_rb7x0")
expand_mode = 1

[node name="happy_lbl" type="Label" parent="Panel/HBoxContainer/data_section/effects_section/happy_section"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4knpa")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("10_rb7x0")
text = "+5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="money_section" type="VBoxContainer" parent="Panel/HBoxContainer/data_section/effects_section"]
layout_mode = 2
alignment = 1

[node name="money_pnl" type="Panel" parent="Panel/HBoxContainer/data_section/effects_section/money_section"]
custom_minimum_size = Vector2(84, 84)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("10_rb7x0")

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/data_section/effects_section/money_section/money_pnl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 10.0
offset_right = 32.0
offset_bottom = 74.0
grow_horizontal = 2
texture = ExtResource("10_gq5yt")

[node name="money_lbl" type="Label" parent="Panel/HBoxContainer/data_section/effects_section/money_section"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4knpa")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("10_rb7x0")
text = "+5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="effect_f_section" type="VBoxContainer" parent="Panel/HBoxContainer/data_section/effects_section"]
layout_mode = 2
alignment = 1

[node name="effect_pnl" type="Panel" parent="Panel/HBoxContainer/data_section/effects_section/effect_f_section"]
custom_minimum_size = Vector2(84, 84)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("11_ch0ss")

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/data_section/effects_section/effect_f_section/effect_pnl"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 10.0
offset_right = 32.0
offset_bottom = 74.0
grow_horizontal = 2
texture = ExtResource("12_rb7x0")
expand_mode = 1

[node name="effect_f_lbl" type="Label" parent="Panel/HBoxContainer/data_section/effects_section/effect_f_section"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4knpa")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("11_ch0ss")
text = "+5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="effect_s_section" type="VBoxContainer" parent="Panel/HBoxContainer/data_section/effects_section"]
layout_mode = 2
alignment = 1

[node name="effect_pnl" type="Panel" parent="Panel/HBoxContainer/data_section/effects_section/effect_s_section"]
custom_minimum_size = Vector2(84, 84)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("15_65apb")

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/data_section/effects_section/effect_s_section/effect_pnl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 10.0
offset_right = 32.0
offset_bottom = 74.0
grow_horizontal = 2
texture = ExtResource("12_rb7x0")

[node name="effect_s_lbl" type="Label" parent="Panel/HBoxContainer/data_section/effects_section/effect_s_section"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4knpa")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("15_65apb")
text = "+5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/data_section"]
custom_minimum_size = Vector2(0, 84)
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Panel" type="Panel" parent="Panel/HBoxContainer/data_section/MarginContainer"]
custom_minimum_size = Vector2(0, 84)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/panel = ExtResource("13_65apb")

[node name="phone_section" type="HBoxContainer" parent="Panel/HBoxContainer/data_section/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Panel" type="Panel" parent="Panel/HBoxContainer/data_section/MarginContainer/Panel/phone_section"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1
theme_override_styles/panel = ExtResource("3_gq5yt")

[node name="phone_img" type="TextureRect" parent="Panel/HBoxContainer/data_section/MarginContainer/Panel/phone_section/Panel"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
texture = ExtResource("14_urvbm")
expand_mode = 1

[node name="phone_lbl" type="Label" parent="Panel/HBoxContainer/data_section/MarginContainer/Panel/phone_section"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_4knpa")
theme_override_font_sizes/font_size = 30
text = "call_"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="call_friend_btn" type="Button" parent="Panel/HBoxContainer/data_section/MarginContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/focus = ExtResource("3_gq5yt")
theme_override_styles/hover_pressed = ExtResource("3_gq5yt")
theme_override_styles/hover = ExtResource("3_gq5yt")
theme_override_styles/pressed = ExtResource("3_gq5yt")
theme_override_styles/normal = ExtResource("3_gq5yt")

[connection signal="pressed" from="Panel/HBoxContainer/data_section/MarginContainer/call_friend_btn" to="." method="_on_call_friend_btn_pressed"]
